--- a/index.html
+++ b/index.html
@@ -66,9 +66,129 @@
             </div>
         </div>
     </nav>
+    <!-- 轮播图 -->
+    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel"  style=" width:1140px; height:350px;margin: auto;">
+        <ol class="carousel-indicators">
+          <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner">
+          <div class="carousel-item active" >
+            <img class="d-block w-100" src="https://res.vmallres.com/pimages//sale/2018-09/2018091216573212.jpg" alt="First slide">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="https://res5.vmallres.com/shopdc/pic/b35c154b-69d0-4dcb-8f9c-70820b20bfb1.jpg" alt="Second slide">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="https://res2.vmallres.com/shopdc/pic/399ae09c-8a2f-41b9-8499-e0d4b979a763.jpg" alt="Third slide">
+          </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
+          <!-- 信息模块 -->
+    <div class="heima_info hidden-xs">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4 col-sm-6">
+                    <a href="#">
+                        <div class="media">
+                            <div class="media-left">
+                                <span class="heima_icon heima_icon_E903"></span>
+                            </div>
+                            <div class="media-body">
+                                <h4 class="media-heading">支付交易保障</h4>
+                                <p>银联支付全称保证支付安全</p>
+                            </div>
+                        </div>
+                    </a>
+
+                </div>
+                <div class="col-md-4 col-sm-6">
+                    <a href="#">
+                        <div class="media">
+                            <div class="media-left">
+                                <span class="heima_icon heima_icon_E903"></span>
+                            </div>
+                            <div class="media-body">
+                                <h4 class="media-heading">平台财产安全</h4>
+                                <p>由PICC护驾护航</p>
+                            </div>
+                        </div>
+                    </a>
+
+                </div>
+                <div class="col-md-4 col-sm-6">
+                    <a href="#">
+                        <div class="media">
+                            <div class="media-left">
+                                <span class="heima_icon heima_icon_E903"></span>
+                            </div>
+                            <div class="media-body">
+                                <h4 class="media-heading">交易安全</h4>
+                                <p>由保险公司对借款人承保</p>
+                            </div>
+                        </div>
+                    </a>
+
+                </div>
+                <div class="col-md-4 col-sm-6">
+                    <a href="#">
+                        <div class="media">
+                            <div class="media-left">
+                                <span class="heima_icon heima_icon_E903"></span>
+                            </div>
+                            <div class="media-body">
+                                <h4 class="media-heading">安全保障</h4>
+                                <p>独创八层安全保障机制</p>
+                            </div>
+                        </div>
+                    </a>
+
+                </div>
+                <div class="col-md-4 col-sm-6">
+                    <a href="#">
+                        <div class="media">
+                            <div class="media-left">
+                                <span class="heima_icon heima_icon_E903"></span>
+                            </div>
+                            <div class="media-body">
+                                <h4 class="media-heading">筛选优质资产</h4>
+                                <p>对接知名企业征信系统</p>
+                            </div>
+                        </div>
+                    </a>
+
+                </div>
+                <div class="col-md-4 col-sm-6">
+                    <a href="#">
+                        <div class="media">
+                            <div class="media-left">
+                                <span class="heima_icon heima_icon_E903"></span>
+                            </div>
+                            <div class="media-body">
+                                <h4 class="media-heading">联合信息发布</h4>
+                                <p>与名企共同发布利率指数报告</p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
 
 
 
+
+
+      
 
 
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
