--- a/index.html
+++ b/index.html
@@ -183,8 +183,187 @@
             </div>
         </div>
     </div>
-
-
+    <!-- 预约 -->
+    <div class="heima_book">
+        <div class="container">
+            <div class="pull-left">
+                <span class="heima_icon heima_icon_E906"></span>
+                现在有273人排队，累计预约交易成功7571次。什么是预约投标？
+                <a class="book_link" href="#">立即预约</a>
+            </div>
+            <div class="pull-right hidden-xs">
+                <a href="#">
+                    <span class="heima_icon heima_icon_E905"></span>
+                    黑马程序员企业宣传片
+                </a>
+            </div>
+        </div>
+    </div>
+    <!-- 产品模块 -->
+    <div class="heima_product">
+        <div class="container">
+            <!-- nav tabs -->
+            <div class="nav-tabs-product-parent">
+                <ul class="nav nav-tabs-product" role="tablist">
+                    <li role="presentation" class="active">
+                        <a href="#product_tab_01" aria-controls="home" role="tab" data-toggle="tab">特别推荐</a>
+                    </li>
+                    <li role="presentation">
+                        <a href="#product_tab_02" aria-controls="profile" role="tab" data-toggle="tab">黑马投资</a>
+                    </li>
+                    <li role="presentation">
+                        <a href="#product_tab_03" aria-controls="messages" role="tab" data-toggle="tab">黑马投资</a>
+                    </li>
+                    <li role="presentation">
+                        <a href="#product_tab_04" aria-controls="settings" role="tab" data-toggle="tab">黑马投资</a>
+                    </li>
+                    <li role="presentation">
+                        <a href="#product_tab_05" aria-controls="profile" role="tab" data-toggle="tab">黑马投资</a>
+                    </li>
+                    <li role="presentation">
+                        <a href="#product_tab_06" aria-controls="messages" role="tab" data-toggle="tab">黑马投资</a>
+                    </li>
+                    <li role="presentation">
+                        <a href="#product_tab_05" aria-controls="settings" role="tab" data-toggle="tab">黑马投资</a>
+                    </li>
+                </ul>
+            </div>
+            <!-- tab pans -->
+            <div class="tab-content">
+                <div role="tabpanel" class="tab-pane active" id="product_tab_01">
+                    <div class="col-xs-12 col-sm-6 col-md-4">
+                        <a href="#" class="product_box active">
+                            <div class="product_box_right">
+                                <p>
+                                    <b>8</b><sub>%</sub>
+                                </p>
+                                <p>年利率</p>
+                            </div>
+                            <div class="product_box_left">
+                                <h3 class="text-center">新手体验标1002期</h3>
+                                <div class="col-xs-6 text-left">
+                                    <p>起投资金额（元）</p>
+                                    <p>0.01万</p>
+                                </div>
+                                <div class="col-xs-6 text-right">
+                                    <p>已投标人数</p>
+                                    <p>22</p>
+                                </div>
+                                <div class="col-xs-6 text-left">
+                                    <p>借款期限</p>
+                                    <p>10天</p>
+                                </div>
+                                <div class="col-xs-6 text-right">
+                                    <p>已投标总金额（元）</p>
+                                    <p>2000</p>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-xs-12 col-sm-6 col-md-4">
+                        <a href="#" class="product_box">
+                            <div class="product_box_right">
+                                <div class="toolTip_box">
+                                    <span class="bao" data-toggle="tolltip" data-palcement="top" title="微金宝">宝</span>
+                                    <span class="bei" data-toggle="tolltip" data-palcement="top" title="北京市">北</span>
+                                </div>
+                                <p><b>8</b><sub>%</sub></p>
+                                <p>年利率</p>
+                            </div>
+                            <div class="product_box_left">
+                                <h3 class="text-center">新手体验标1002期</h3>
+                                <div class="col-xs-6 text-left">
+                                    <p>起投资金额（元）</p>
+                                    <p>0.01万</p>
+                                </div>
+                                <div class="col-xs-6 text-right">
+                                    <p>已投标人数</p>
+                                    <p>22</p>
+                                </div>
+                                <div class="col-xs-6 text-left">
+                                    <p>借款期限</p>
+                                    <p>10天</p>
+                                </div>
+                                <div class="col-xs-6 text-right">
+                                    <p>已投标总金额（元）</p>
+                                    <div class="progress">
+                                        <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0"
+                                            aria-valuemax="100" style="width:60%;">
+                                            <span class="sr-only">60% Complete</span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-xs-12 col-sm-6 col-md-4">
+                        <a href="#" class="product_box active">
+                            <div class="product_box_right">
+                                <p>
+                                    <b>8</b><sub>%</sub>
+                                </p>
+                                <p>年利率</p>
+                            </div>
+                            <div class="product_box_left">
+                                <h3 class="text-center">新手体验标1002期</h3>
+                                <div class="col-xs-6 text-left">
+                                    <p>起投资金额（元）</p>
+                                    <p>0.01万</p>
+                                </div>
+                                <div class="col-xs-6 text-right">
+                                    <p>已投标人数</p>
+                                    <p>22</p>
+                                </div>
+                                <div class="col-xs-6 text-left">
+                                    <p>借款期限</p>
+                                    <p>10天</p>
+                                </div>
+                                <div class="col-xs-6 text-right">
+                                    <p>已投标总金额（元）</p>
+                                    <p>2000</p>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-xs-12 col-sm-6 col-md-4">
+                        <a href="#" class="product_box active">
+                            <div class="product_box_right">
+                                <p>
+                                    <b>8</b><sub>%</sub>
+                                </p>
+                                <p>年利率</p>
+                            </div>
+                            <div class="product_box_left">
+                                <h3 class="text-center">新手体验标1002期</h3>
+                                <div class="col-xs-6 text-left">
+                                    <p>起投资金额（元）</p>
+                                    <p>0.01万</p>
+                                </div>
+                                <div class="col-xs-6 text-right">
+                                    <p>已投标人数</p>
+                                    <p>22</p>
+                                </div>
+                                <div class="col-xs-6 text-left">
+                                    <p>借款期限</p>
+                                    <p>10天</p>
+                                </div>
+                                <div class="col-xs-6 text-right">
+                                    <p>已投标总金额（元）</p>
+                                    <p>2000</p>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+                <div role="tabpanel" class="tab-pane" id="product_tab_02"></div>
+                <div role="tabpanel" class="tab-pane" id="product_tab_03"></div>
+                <div role="tabpanel" class="tab-pane" id="product_tab_04"></div>
+                <div role="tabpanel" class="tab-pane" id="product_tab_05"></div>
+                <div role="tabpanel" class="tab-pane" id="product_tab_06"></div>
+                <div role="tabpanel" class="tab-pane" id="product_tab_07"></div>
+            </div>
+        </div>
+    </div>
 
 
 
