--- a/index.html
+++ b/index.html
@@ -364,7 +364,110 @@
             </div>
         </div>
     </div>
+    <!-- 新闻模块 -->
+    <div class="heima_news">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-2 col-md-offset-2">
+                    <div class="news_title">全部新闻</div>
+                </div>
+                <div class="col-md-1">
+                    <div class="news_line hidden-sm hidden-xs"></div>
+                    <!-- Nzv tsbs -->
+                    <ul class="nav nav-tabs-news" role="tablist">
+                        <li role="presentation" class="active">
+                            <a href="#home" aria-controls="home" role="tab" data-tooggle="tab">
+                                <span class="heima_icon heima_icon_new01"></span> </a>
+                        </li>
+                        <li role="presentation">
+                            <a href="#profile" aria-controls="profile" role="tab" data-tooggle="tab">
+                                <span class="heima_icon heima_icon_new02"></span> </a>
+                        </li>
+                        <li role="presentation">
+                            <a href="#messages" aria-controls="messages" role="tab" data-tooggle="tab">
+                                <span class="heima_icon heima_icon_new03"></span> </a>
+                        </li>
+                        <li role="presentation">
+                            <a href="#settings" aria-controls="settings" role="tab" data-tooggle="tab">
+                                <span class="heima_icon heima_icon_new04"></span> </a>
+                        </li>
+                    </ul>
 
+                </div>
+                <div class="col-md-7">
+                    <!-- Tab panes -->
+                    <div class="tab-content">
+                        <div role="tabpanel" class="tab-pane active" id="home">
+                            <ul>
+                                <li>
+                                    <a href="#"><span class="hidden-xs">2018-1-02</span>
+                                        【黑马还款】一周还款公告2018年12月23日-2018年12月29日
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#"><span class="hidden-xs">2018-1-02</span>
+                                        【黑马还款】一周还款公告2018年12月23日-2018年12月29日
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#"><span class="hidden-xs">2018-1-02</span>
+                                        【黑马还款】一周还款公告2018年12月23日-2018年12月29日
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#"><span class="hidden-xs">2018-1-02</span>
+                                        【黑马还款】一周还款公告2018年12月23日-2018年12月29日
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#"><span class="hidden-xs">2018-1-02</span>
+                                        【黑马还款】一周还款公告2018年12月23日-2018年12月29日
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#"><span class="hidden-xs">2018-1-02</span>
+                                        【黑马还款】一周还款公告2018年12月23日-2018年12月29日
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#"><span class="hidden-xs">2018-1-02</span>
+                                        【黑马还款】一周还款公告2018年12月23日-2018年12月29日
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#"><span class="hidden-xs">2018-1-02</span>
+                                        【黑马还款】一周还款公告2018年12月23日-2018年12月29日
+                                    </a>
+                                </li>
+
+                            </ul>
+                        </div>
+                        <div role="tabpabel" class="tab-pane" id="profile">...</div>
+                        <div role="tabpabel" class="tab-pane" id="messages">...</div>
+                        <div role="tabpabel" class="tab-pane" id="settings">...</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- footer 模块 -->
+    <footer class="heima_partner">
+        <div class="container">
+            <h3>合作伙伴</h3>
+            <ul>
+                <li><a href="#" class="heima_icon heima_icon_partner01"></a></li>
+                <li><a href="#" class="heima_icon heima_icon_partner02"></a></li>
+                <li><a href="#" class="heima_icon heima_icon_partner03"></a></li>
+                <li><a href="#" class="heima_icon heima_icon_partner04"></a></li>
+                <li><a href="#" class="heima_icon heima_icon_partner05"></a></li>
+                <li><a href="#" class="heima_icon heima_icon_partner06"></a></li>
+                <li><a href="#" class="heima_icon heima_icon_partner07"></a></li>
+                <li><a href="#" class="heima_icon heima_icon_partner08"></a></li>
+                <li><a href="#" class="heima_icon heima_icon_partner09"></a></li>
+            </ul>
+        </div>
+    </footer>
+</body>
 
 
       
