--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
                 <div class="col-md-2">
                     <a href="#" class="heima_app">
                         <span class="heima_icon heima_icon_phone">
-
+                            <img src="./images/1.png" alt="">
                         </span>
                         <span>手机黑马商城</span>
                         <span class="glyphicon glyphicon-menu-down"></span>
-                        <img src="http://img0.imgtn.bdimg.com/it/u=2998937522,395982328&fm=26&gp=0.jpg" alt="">
+                        <img src="../itheima/images/二维码.jpg" alt="">
                     </a>
                 </div>
                 <div class="col-md-5">
